decided not to hard code the following bunnies positions but to have them just use a start to compute the next step to the bunny infront